--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-image: url(03.jpg);
+    /* background-image: url(03.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -34,16 +34,18 @@ body {
 
 @media only screen and (max-width:480px) {
     body {
-      background-image: url(01.jpg);
-      background-repeat: no-repeat;
-      height: 830px;
+      height: 230px;
       margin: 0px;
     }
-    section-1{
+    .section-1{
+      /* background-image: url(03.jpg); */
+      /* background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-color: white; */
       
     }
     .div-0{
-        border: 2px solid white;
+        border: 2px solid rgb(228, 228, 228);
         height: 50px;
         display: flex;
         justify-content: center;
@@ -56,6 +58,11 @@ body {
         flex-direction: column;
         text-align: center;
         align-items: center;
+        box-shadow: 0 29px 52px rgba(0,0,0,0.40), 0 25px 16px rgba(0,0,0,0.20);
+        background-color: white;
+        margin: 50px 6%;
+        height: 450px;
+        border-radius: 6px;
     }
     .img-1{
         width: 130px;
@@ -179,6 +186,63 @@ body {
   .div-5{
     font-size: 25px;
   }
-
+  .div-6{
+    display: flex;
+    gap: 30px;
+    margin-top: 10px;
   }
+  .tooltiptext{
+    margin-left: 3px;
+  }
+  .tooltip{
+    background-color: black;
+    color: white;
+    padding: 5px 8px;
+    font-weight: bold;
+    border-radius: 6px;
+  }
+  .tooltip:hover{
+    background-color: #002bff;
+    color: white;
+  }
+
+
+
+  .dropbtn:hover, .dropbtn:focus {
+    border: 2px solid rgb(216, 214, 214) ;
+    padding: 5px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  right: 0;
+  z-index: 1;
+  border-radius: 8px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+     
+
+}
+
+  
 
