--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     /* background-image: url(03.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
+    margin: 0;
     
 
   }
@@ -29,6 +30,214 @@ body {
     border-radius: 10px;
 
 }
+
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: 8px;
+  font-size: 18px;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+
+.div-3{
+  background-color: #132743;
+  margin-top: 2px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.div-3 a{
+  color: rgb(55, 144, 246);
+  font-size: 20px;
+  text-decoration: none;
+}
+.div-4 a{
+  color: white;
+  margin-left: 10px;
+  font-size: 25px;
+
+}
+.div-4 {
+  margin-top: 20px;
+
+}
+.span-1{
+  color: white;
+  font-size: 20px;
+}
+.div-5{
+  font-size: 25px;
+}
+.div-6{
+  display: flex;
+  gap: 30px;
+  margin-top: 10px;
+}
+.tooltiptext{
+  margin-left: 3px;
+}
+.tooltip{
+  background-color: black;
+  color: white;
+  padding: 5px 8px;
+  font-weight: bold;
+  border-radius: 6px;
+}
+.tooltip:hover{
+  background-color: #002bff;
+  color: white;
+}
+
+
+
+.dropbtn:hover, .dropbtn:focus {
+  border: 2px solid rgb(216, 214, 214) ;
+  padding: 5px;
+}
+
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+overflow: auto;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+right: 0;
+z-index: 1;
+border-radius: 8px;
+}
+
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+
+.div-0{
+  border: 2px solid rgb(228, 228, 228);
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 500px;
+  align-items: center;
+  padding-top: 5px;
+}
+.div-1{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  box-shadow: 0 29px 52px rgba(0,0,0,0.40), 0 25px 16px rgba(0,0,0,0.20);
+  background-color: white;
+  margin: 50px 30%;
+  height: 450px;
+  border-radius: 6px;
+}
+.img-1{
+  width: 130px;
+  height: 40px;
+  border-radius: 6px;
+}
+#textarea1{
+  text-align: center;
+  height: 100px;
+  width: 300px;
+  resize: none;
+  background-color: #e4e8ec;
+}
+#textarea2{
+  height: 100px;
+  width: 300px;
+  resize: none;
+  text-align: center;
+  margin-top: 30px;
+  background-color: #e4e8ec;
+}
+.h2-1{
+  color: #FFFF;
+  margin:20px 80px;
+  padding: 10px 10px ;
+  background-color: rgb(70, 97, 124);
+  border-radius: 10px;
+
+}
+.ii-1{
+  color:blue ;
+}
+.div-2 {
+/* display: flex; */
+margin-top: 20px;
+
+}
+
+
+
+
+
+
+
+
 
 
 
